--- a/ScenegraphWithLightsTextures/ScenegraphWithLightsTextures/ScenegraphWithLightsTextures.vcxproj
+++ b/ScenegraphWithLightsTextures/ScenegraphWithLightsTextures/ScenegraphWithLightsTextures.vcxproj
@@ -52,12 +52,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../../../graphics/headers</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../graphics/headers</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>../../../graphics/lib/GL;../../../graphics/lib/SFML</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../../graphics/lib/GL;../../graphics/lib/SFML</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-window-d.lib;sfml-graphics-d.lib;sfml-system-d.lib;opengl32.lib;glew32.lib;glu32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
